--- a/src/main/java/gm/PowersTrainsGym/gui/PowerTrainsForm.form
+++ b/src/main/java/gm/PowersTrainsGym/gui/PowerTrainsForm.form
@@ -42,7 +42,7 @@
                   <text value="Nombre"/>
                 </properties>
               </component>
-              <component id="c6475" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+              <component id="c6475" class="javax.swing.JTextField" binding="nombreTextField">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -58,7 +58,7 @@
                   <text value="Apellido"/>
                 </properties>
               </component>
-              <component id="b60ac" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+              <component id="b60ac" class="javax.swing.JTextField" binding="apellidoTextField">
                 <constraints>
                   <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -74,7 +74,7 @@
                   <text value="Membresia"/>
                 </properties>
               </component>
-              <component id="8258e" class="javax.swing.JTextField" binding="textField3" default-binding="true">
+              <component id="8258e" class="javax.swing.JTextField" binding="membresiaTextField">
                 <constraints>
                   <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
